# nlp-transformers

./: Cargo.toml  README.md  pyproject.toml
notebooks/: ch01_hello_transformers.ipynb
