[tool.poetry]
name = "nlp-transformers"
version = "0.1.0"
description = ""
authors = ["Matt Kafonek <kafonek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
jupyter = "^1.0.0"
notebook = "^7.0.6"
transformers = "^4.36.2"
pandas = "^2.1.4"
torch = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
